--- a/2-14Mission08/Views/Home/MatrixForm.cshtml
+++ b/2-14Mission08/Views/Home/MatrixForm.cshtml
@@ -28,9 +28,9 @@
     <input asp-for="Quadrant" name="Quandrant">
 
     <label asp-for="Completed">Completed</label><br>
-    <input type="radio"  asp-for="Completed" value="true">
+    <input type="radio"  asp-for="Completed" value="True">
     <label for="Completed">True</label>
-    <input type="radio" asp-for="Completed" value="false">
+    <input type="radio" asp-for="Completed" value="False">
     <label asp-for="Completed">False</label><br><br>
 
     <button type="submit">Submit</button>
