--- a/2-14Mission08/Views/Home/MatrixForm.cshtml
+++ b/2-14Mission08/Views/Home/MatrixForm.cshtml
@@ -25,8 +25,13 @@
     <input asp-for="DueDate"><br><br>
 
     <label asp-for="Quadrant">Quadrant:</label><br>
-    <input asp-for="Quadrant" name="Quandrant">
-
+    <select asp-for="Quadrant">
+        <option value=1>1</option>
+        <option value=2>2</option>
+        <option value=3>3</option>
+        <option value=4>4</option>
+    </select>
+    <br />
     <label asp-for="Completed">Completed</label><br>
     <input type="radio"  asp-for="Completed" value="True">
     <label for="Completed">True</label>
