--- a/2-14Mission08/Views/Home/MatrixForm.cshtml
+++ b/2-14Mission08/Views/Home/MatrixForm.cshtml
@@ -44,10 +44,10 @@
         </div>
         <div class="col-md-10">
             <select asp-for="Quadrant" class="form-select">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
+                <option value="1">1 Important / Urgent</option>
+                <option value="2">2 Important / Not Urgent</option>
+                <option value="3">3 Not Important / Urgent</option>
+                <option value="4">4 Not Important / Not Urgent</option>
             </select>
         </div>
     </div>
