added date placeholder

--- a/2-14Mission08/Views/Home/MatrixForm.cshtml
+++ b/2-14Mission08/Views/Home/MatrixForm.cshtml
@@ -34,7 +34,7 @@
             <label asp-for="DueDate" class="form-label">DueDate:</label>
         </div>
         <div class="col-md-10">
-            <input asp-for="DueDate" class="form-control">
+            <input asp-for="DueDate" class="form-control" placeholder="mm-dd-yyyy">
         </div>
     </div>
 
